// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewExplorerLink.vue Should display a new link form 1`] = `
<div>
  <div class="row">
    <div class="col col-4">
      <div class="v-input v-input--has-state v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined error--text">
        <div class="v-input__control">
          <div class="v-input__slot">
            <fieldset aria-hidden="true">
              <legend style="width: 0px;"><span class="notranslate">​</span></legend>
            </fieldset>
            <div class="v-text-field__slot"><label for="input-4" class="v-label theme--light error--text" style="left: 0px; position: absolute;">URL *</label><input small="" id="input-4" type="text"></div>
          </div>
          <div class="v-text-field__details">
            <div class="v-messages theme--light error--text" role="alert">
              <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="col col-4">
      <div class="v-input v-input--has-state v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined error--text">
        <div class="v-input__control">
          <div class="v-input__slot">
            <fieldset aria-hidden="true">
              <legend style="width: 0px;"><span class="notranslate">​</span></legend>
            </fieldset>
            <div class="v-text-field__slot"><label for="input-7" class="v-label theme--light error--text" style="left: 0px; position: absolute;">Name *</label><input small="" id="input-7" type="text"></div>
          </div>
          <div class="v-text-field__details">
            <div class="v-messages theme--light error--text" role="alert">
              <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="col col-4">
      <div class="v-input v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined v-select v-autocomplete">
        <div class="v-input__control">
          <div role="combobox" aria-haspopup="listbox" aria-expanded="false" aria-owns="list-10" class="v-input__slot">
            <fieldset aria-hidden="true">
              <legend style="width: 0px;"><span class="notranslate">​</span></legend>
            </fieldset>
            <div class="v-select__slot"><label for="input-10" class="v-label theme--light" style="left: 0px; position: absolute;">Icon</label><input small="" id="input-10" type="text" autocomplete="off"><input type="hidden"></div>
            <div class="v-menu">
              <!---->
            </div>
          </div>
          <div class="v-text-field__details">
            <div class="v-messages theme--light">
              <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
            </div>
          </div>
        </div>
        <div class="v-input__append-outer"><button type="button" class="v-btn v-btn--icon v-btn--round theme--light v-size--small"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-delete theme--light error--text"></i></span></button></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`NewExplorerLink.vue Should display an existing link form 1`] = `
<div>
  <div class="row">
    <div class="col col-4">
      <div class="v-input v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined">
        <div class="v-input__control">
          <div class="v-input__slot">
            <fieldset aria-hidden="true">
              <legend style="width: -24px;"><span class="notranslate">​</span></legend>
            </fieldset>
            <div class="v-text-field__slot"><label for="input-20" class="v-label v-label--active theme--light" style="left: 0px; position: absolute;">URL *</label><input small="" id="input-20" type="text"></div>
          </div>
          <div class="v-text-field__details">
            <div class="v-messages theme--light">
              <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="col col-4">
      <div class="v-input v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined">
        <div class="v-input__control">
          <div class="v-input__slot">
            <fieldset aria-hidden="true">
              <legend style="width: -24px;"><span class="notranslate">​</span></legend>
            </fieldset>
            <div class="v-text-field__slot"><label for="input-23" class="v-label v-label--active theme--light" style="left: 0px; position: absolute;">Name *</label><input small="" id="input-23" type="text"></div>
          </div>
          <div class="v-text-field__details">
            <div class="v-messages theme--light">
              <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="col col-4">
      <div class="v-input v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined v-select v-autocomplete">
        <div class="v-input__control">
          <div role="combobox" aria-haspopup="listbox" aria-expanded="false" aria-owns="list-26" class="v-input__slot">
            <fieldset aria-hidden="true">
              <legend style="width: -24px;"><span class="notranslate">​</span></legend>
            </fieldset>
            <div class="v-select__slot"><label for="input-26" class="v-label v-label--active theme--light" style="left: 0px; position: absolute;">Icon</label><input small="" id="input-26" type="text" autocomplete="off">
              <div class="v-input__append-inner">
                <div class="v-input__icon v-input__icon--append"><i aria-hidden="true" class="v-icon notranslate mdi mdi-twitter theme--light"></i></div>
              </div><input type="hidden" value="mdi-twitter">
            </div>
            <div class="v-menu">
              <!---->
            </div>
          </div>
          <div class="v-text-field__details">
            <div class="v-messages theme--light">
              <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
            </div>
          </div>
        </div>
        <div class="v-input__append-outer"><button type="button" class="v-btn v-btn--icon v-btn--round theme--light v-size--small"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-delete theme--light error--text"></i></span></button></div>
      </div>
    </div>
  </div>
</div>
`;
